# hand-pose-estimation

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
artifacts/baseline/: evaluation.json
artifacts/baseline-model-1/: evaluation.json
artifacts/baseline-model-2/: evaluation.json
artifacts/improved-model-1/: evaluation.json
artifacts/improved-model-1-online-augmented/: evaluation.json
artifacts/improved_v1/: evaluation.json
docs/: artifact-locations.md  building-and-running.md  experiment-log.md  freihand-dataset.md  report-figure-captions.md  report-figure-generation.md  reproduce-results.md  setup.md  training.md  web-demo.md  web-deployment.md  webcam-game-demo.md
logs/baseline-model-1/: config.json  history.json
logs/improved-model-1/: config.json  history.json
logs/improved-model-1-online-augmented/: config.json  history.json
models/baseline-model-1/: best.keras
notebooks/: 01_dataset_check.ipynb  02_checkpoint_verification.ipynb  03_report_results.ipynb  compare_runs.ipynb  explore_dataset.ipynb  load_baseline.ipynb  load_improved.ipynb  test_setup.ipynb  train_baseline.ipynb  variant_test.ipynb
reports/: result-summary.md
requirements/: base.txt  deploy.txt  dev.txt
src/data/: __init__.py  augmentations.py  freihand.py
src/demo/: __init__.py  trex_webcam.py
src/evaluation/: comparison.py  evaluate_run.py  metrics.py  overlays.py  report_figure_set.py  report_figures.py  report_summary.py  training_curves.py
src/models/: __init__.py  baseline_cnn.py  heatmaps.py  improved_cnn.py
(+9 files in other folders)
