[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-pose-estimation"
version = "0.1.0"
description = "Hand pose estimation experiments and dataset utilities."
requires-python = ">=3.11"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]
